--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-W1KVMS9J0Y', { debug_mode: true });
+  gtag('config', 'G-W1KVMS9J0Y');
 </script>
 
 
