Update logo title to 'Apex Grill'

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <i class="fa-solid fa-utensils"></i>
           </div>
           <div class="logo-text">
-            <h1 class="logo-title">Apex Grill - B - Omission</h1>
+            <h1 class="logo-title">Apex Grill</h1>
           </div>
         </div>
 
