--- a/index.html
+++ b/index.html
@@ -478,12 +478,12 @@
           <p class="order-modal-text">
             Vielen Dank für Ihre Bestellung!
           </p>
-          <h3>Kehren sie nun zu der Umfrage zurück und geben sie dort Ihren Bestellwert ein:</h3>
-          <h3 class="order-modal-text" style="font-weight: 600; color: hsl(var(--primary)); margin-top: 0.5rem;">
-            Ihr Bestellwert ist: <span id="orderValue">0.00</span>
-          </h3>
-          <button id="closeOrderModal" class="order-modal-btn">
-            Fertig
+         <h3>Bitte KOPIEREN Sie Ihren Bestellwert und fügen Sie ihn anschließend in die Umfrage ein!</h3>
+                <h2 class="order-modal-text" style="font-weight: 600; color: hsl(var(--primary)); margin-top: 0.5rem;">
+                    Ihr Bestellwert ist: <span id="orderValue">0.00</span>
+                </h2>
+          <button id="copyOrderValue" class="order-modal-btn">
+            Kopieren
           </button>
         </div>
         <div class="order-modal-deco-1"></div>
